# ragtime-broccoli

./: .gitignore  README.md  pyproject.toml
cli/: helpers.py  keyword_search_cli.py  search_cls.py  semantic_search_cli.py
cli/errors/: exception_handling.py
cli/lib/: semantic_search.py
cli/utils/: constants.py  helpers.py
tests/: conftest.py  test_keyword_search_cli.py  test_search_cls.py
