[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk==3.9.1",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

pythonpath = [".", "cli"]

[dependency-groups]
lint = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
]
dev = [
    "ipython>=9.0",
]

[tool.uv]
default-groups = ["test", "lint", "dev"]
