[project]
name = "rag-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk==3.9.1",
    "sentence-transformers>=5.2.2",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

pythonpath = [".", "cli"]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["cache", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # let formatter handle long lines while adopting linting
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
lint = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
dev = [
    "ipython>=9.0",
]

[tool.uv]
default-groups = ["test", "lint", "dev"]
